# WIDDAK

./: .gitignore  .gitmodules  .sym_link_data  GDMCPastCodeDownload.py  LICENSE  PastCodeMakeSymLinks.py  README.md  VisualizeMapGDPCE.py  camera_parameters.json  requirements.txt  setup.py
MarkovJunior/: models.xml  modelsT1_1.xml
MarkovJunior/models/: ApartemazementsTiny.xml  EthanTree.xml  MazeMapTesting1.xml  ModernHouseMOD2.xml  ModernHouseT1.xml  TestingApt1.xml  TreeV2.xml
MarkovJunior/multiple_outputs/: ModernHouseOutput0.vox  ModernHouseOutput1.vox  ModernHouseOutput2.vox  ModernHouseOutput3.vox  ModernHouseOutput4.vox  ModernHouseOutput5.vox  ModernHouseOutput6.vox  ModernHouseOutput7.vox  ModernHouseOutput8.vox  ModernHouseOutput9.vox
MarkovJunior/output/: Apartemazements_1375167143.vox  Apartemazements_1465051934.vox  Apartemazements_1768702731.vox  EthanTree_1823489971.vox  ModernHouse.vox  ModernHouseMOD2_1193458458.vox  ModernHouseMOD2_45348516.vox  ModernHouseMOD2_67767641.vox  ModernHouseT1_606921647.vox
MarkovJunior/resources/: Apartemazements_722238551.vox  TreeV2_2120272460.vox  palette.xml
Wave Function Collapse/: city_wave_function_collapse.py
block_assets/: grass.pdn
blueprints/: ID_Name_Data.html  Village_Structure_Blueprints.html  blueprint_html_to_dicts.py  building_templates.json
blueprints/buildings/: Desert_animal_pen_1_blueprint.html  Desert_armorer_1_blueprint.html  Desert_butcher_shop_1_blueprint.html  (+84 more)
examples/: ReadMe.md  visualize_map.py  visualize_vox.py
gdpc/: amuletWorldLoader.py  bitarray.py  block.py  block_state_util.py  book.py  color.py  direct_interface.py  geometry.py  interface.py  interface_toolbox.py  lookup.py  model.py  nbt.py  renderer.py  template.py  textures.py  toolbox.py  transform.py  util.py  vector_util.py  vox_lookup.py  worldLoader.py
gdpce/: block.py  block_state_util.py  geometry.py  interface.py  nbt_util.py  transform.py  util.py  vector_util.py
gdpce_examples/: .gitignore  LICENSE.txt  README.md  build_structure.py  example.py  example_quick.py  modelBuild.py  modelPull.py  requirements.txt
gdpceu/: blueprints.py  color_map.py  common.py  ply_viewer.py  renderer.py  template.py  textures.py  vox.py  world_loader.py
nca/: gpt.ipynb  playground.ipynb  slime.ipynb
nca/encasm/: env.py  (+1 more)
scripts/: ID_Name_Data.html  MJ_run_to_render.py  VisualizeMapGDPCE.py  create_saved_world.py  create_vox_minecraft_hexcolors.py  fix_file_path.py  gdmc_past_code_download.py  sym_link_base.py  sym_link_manager.py  template_from_build_area.py  template_from_vox.py  template_visualizer.py  vox_to_minecraft.py  vox_visualizer.py
sections/Voxel Renderer/: CMakeLists.txt  TargetArch.cmake  cube.f.glsl  glfw.cpp  point.c  shader_utils.cpp  textures.h  voxel.cpp  voxel.py
sections/Voxel Renderer/GLFW/: glfw-config.cmake
sections/Voxel Renderer/SDL2_IMAGE/: sdl_image-config.cmake
sections/Voxel Renderer/freeglut/: freeglut-config.cmake
sections/Voxel Renderer/include/: input.h  renderer.h  shader_utils.h  shape.h  textures.h  voxel.h
sections/Voxel Renderer/shaders/: cube.f.glsl  cube.v.glsl
sections/Voxel Renderer/src/: core.cpp  input.cpp  main.cpp  renderer.cpp  shape.cpp
src/: render.py  vox.py
(+1183 files in other folders)
